# End-to-End-Advanced-RAG-Project-with-LLMOPS

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
multi_docs_chat/config/: config.yaml
multi_docs_chat/src/document_chat/: retrieval.py
multi_docs_chat/src/document_ingestion/: data_ingestion.py
multi_docs_chat/utils/: document_ops.py  file_io.py  model_loader.py
notebook/: experiments.ipynb
test/: conftest.py
